--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: "Milo"
+title: "Miguel Angel Pimentel Vallejo"
 
-about: "Bootstrap theme for jekyll"
+about: "It's about all things that I make" 
 markdown: kramdown
-url: ""
+url: "https://miguelangelpimentelvallejo.github.io/"
 #baseurl: "/jekyll-theme-milo"
 disqus_short_name: disqus-demo-page
 
