--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,21 @@
 title: "Miguel Angel Pimentel Vallejo"
 
+#email: pimentel.vallejo@gmail.com
+#author: Miguel Angel Pimentel Vallejo
 about: "It's about all things that I make" 
 markdown: kramdown
 url: "https://miguelangelpimentelvallejo.github.io/"
-#baseurl: "/jekyll-theme-milo"
+#baseurl: ""
 disqus_short_name: disqus-demo-page
 
 plugins: 
   - jekyll-paginate
   - jemoji
+  - jekyll-sitemap
+
+# gems:
+#  - jekyll-sitemap
+
   
 paginate_path: "/page:num/"
 
@@ -28,3 +35,23 @@ defaults:
       path: "_posts"
     values:
       layout: "post"
+
+# title: vdaubry.github.io
+# email: vdaubry@gmail.com
+# author: Vincent Daubry
+# description: "A blog about backend development, mobile development, and entrepreneurship"
+# baseurl: ""
+# url: "http://vdaubry.github.io"
+# twitter_username: vdaubry
+# github_username:  vdaubry
+# linkedin_username: vincent daubry
+
+# # Build settings
+# markdown: kramdown
+# highlighter: pygments
+# permalink: pretty
+# paginate: 5
+# exclude: ["node_modules"]
+
+# gems:
+# - jekyll-sitemap
